--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,10 @@
         android:layout_height="wrap_content"
         android:text="@string/WordTextViewDefault"
         android:textIsSelectable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/genPassButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -21,17 +24,26 @@
         android:id="@+id/genPassButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="316dp"
         android:gravity="center_vertical"
         android:onClick="generatePass"
-        android:text="@string/generate_passwords_button" />
+        android:text="@string/generate_passwords_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/langButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
         android:gravity="center_vertical"
         android:onClick="changeLang"
-        android:text="@string/english_lang_button_text" />
+        android:text="@string/english_lang_button_text"
+        app:layout_constraintBottom_toBottomOf="@+id/genPassButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/genPassButton"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
